test/corpus/0003_instructions.txt
================================================================================
instructions
================================================================================
mov $1, %rax
  mov a, %rbx
lea 8(%rsp),%rdi
movl -8(%ebp, %edx, 4), %eax
movl -4(%ebp), %eax
movl (%ecx), %edx
leal 8(,%eax,4), %eax
leal (%edx,%eax,2), %eax
--------------------------------------------------------------------------------
(source_file
  (instruction
    (instruction_name)
    (constant)
    (register))
  (instruction
    (instruction_name)
    (symbol)
    (register))
  (instruction
    (instruction_name)
    (number)
    (register)
    (register))
  (instruction
    (instruction_name)
    (number)
    (register)
    (register)
    (number)
    (register))
  (instruction
    (instruction_name)
    (number)
    (register)
    (register))
  (instruction
    (instruction_name)
    (register)
    (register))
  (instruction
    (instruction_name)
    (number)
    (register)
    (number)
    (register))
  (instruction
    (instruction_name)
    (register)
    (register)
    (number)
    (register)))
