test/corpus/0006_instruction_prefix.txt
================================================================================
instruction prefix
================================================================================
repne scas %es:(%edi),%al
--------------------------------------------------------------------------------
(source_file
  (instruction
    (instruction_prefix)
    (instruction_name)
    (register)
    (register)
    (register)))
