test/corpus/0007_operand_modifier.txt
================================================================================
operand modifier
================================================================================
	call	strlen@PLT
--------------------------------------------------------------------------------
(source_file
  (instruction
    (instruction_name)
    (symbol)
    (operand_modifier)))
