test/corpus/0009_macro_vars.txt
================================================================================
macro vars
================================================================================
.macro foo
\foo\()\@\+
.endm
--------------------------------------------------------------------------------
(source_file
  (directive
    (directive_name)
    (symbol))
  (macro_var
    (symbol))
  (macro_var)
  (macro_var)
  (macro_var)
  (directive
    (directive_name)))
